@@ -315,6 +315,8 @@ my %samples = (
                     { 'fnurk' => 'skib', 'ponk' => 'gleeb' },
                     { 'bar'   => 'krup', 'foo'  => 'plink' }
                 ],
+                raw =>
+                  "---\n-\n  fnurk: skib\n  ponk: gleeb\n-\n  bar: krup\n  foo: plink\n...\n",
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
@@ -341,6 +343,8 @@ my %samples = (
                     'got'      => [ '1', 'pong', '4' ],
                     'expected' => [ '1', '2',    '4' ]
                 },
+                raw =>
+                  "---\nexpected:\n  - 1\n  - 2\n  - 4\ngot:\n  - 1\n  - pong\n  - 4\n...\n",
             },
             {   actual_passed => TRUE,
                 is_actual_ok  => TRUE,
