@@ -42,6 +42,7 @@ Revision history for TAP-Parser
     - Added more tests for T::P::YAMLish
     - Altered T::P::Grammar to use T::P::YAMLish
     - Removed T::P::YAML
+    - Added raw source capture to T::P::YAMLish
 
 0.51 12 March 2007
     - 'execrc' file now allows 'regex' matches for tests.
